// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main Menu route renders correctly in light theme 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#F4F6F9",
      "flex": 1,
    }
  }
  testID="main-menu-screen"
>
  <View
    style={
      [
        {
          "flex": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "stretch",
            "flexDirection": "column",
            "gap": 12,
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "stretch",
              "flexDirection": "column",
              "gap": 12,
              "justifyContent": "flex-start",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "gap": 8,
                "justifyContent": "flex-start",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "flexWrap": "nowrap",
                  "gap": 8,
                  "justifyContent": "flex-start",
                },
                undefined,
              ]
            }
          >
            <View
              accessibilityLabel="B787 logo"
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#DEF7F3",
                  "borderRadius": 6,
                  "height": 28,
                  "justifyContent": "center",
                  "width": 28,
                }
              }
              testID="main-menu-logo"
            >
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "color": "#00C2A8",
                      "fontFamily": "Menlo",
                      "fontSize": 16,
                      "fontWeight": "500",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                      "textAlign": "auto",
                    },
                    undefined,
                  ]
                }
              >
                B7
              </Text>
            </View>
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#1F2937",
                    "fontFamily": "System",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "textAlign": "auto",
                  },
                  {
                    "fontSize": 16,
                  },
                ]
              }
            >
              B787 Calculator
            </Text>
          </View>
          <View
            accessibilityRole="tablist"
            style={
              [
                {
                  "flexDirection": "row",
                  "gap": 4,
                },
                {
                  "alignSelf": "stretch",
                },
              ]
            }
            testID="main-menu-tabs"
          >
            <View
              accessibilityLabel="mainMenu.tabModules"
              accessibilityRole="tab"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": true,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "flex": 1,
                }
              }
              testID="main-menu-tabs-modules"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderRadius": 10,
                      "justifyContent": "center",
                      "minHeight": 44,
                      "paddingHorizontal": 10,
                      "paddingVertical": 5,
                    },
                    {
                      "backgroundColor": "#DEF7F3",
                    },
                    {
                      "opacity": 1,
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={true}
                  style={
                    [
                      {
                        "color": "#00C2A8",
                        "fontFamily": "System",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 16,
                        "textAlign": "auto",
                      },
                      {
                        "fontSize": 12,
                      },
                    ]
                  }
                >
                  mainMenu.tabModules
                </Text>
              </View>
            </View>
            <View
              accessibilityLabel="mainMenu.tabSettings"
              accessibilityRole="tab"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": false,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "flex": 1,
                }
              }
              testID="main-menu-tabs-settings"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderRadius": 10,
                      "justifyContent": "center",
                      "minHeight": 44,
                      "paddingHorizontal": 10,
                      "paddingVertical": 5,
                    },
                    null,
                    {
                      "opacity": 1,
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={true}
                  style={
                    [
                      {
                        "color": "#4B5563",
                        "fontFamily": "System",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 16,
                        "textAlign": "auto",
                      },
                      {
                        "fontSize": 12,
                      },
                    ]
                  }
                >
                  mainMenu.tabSettings
                </Text>
              </View>
            </View>
            <View
              accessibilityLabel="mainMenu.tabAbout"
              accessibilityRole="tab"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": false,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "flex": 1,
                }
              }
              testID="main-menu-tabs-about"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderRadius": 10,
                      "justifyContent": "center",
                      "minHeight": 44,
                      "paddingHorizontal": 10,
                      "paddingVertical": 5,
                    },
                    null,
                    {
                      "opacity": 1,
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={true}
                  style={
                    [
                      {
                        "color": "#4B5563",
                        "fontFamily": "System",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 16,
                        "textAlign": "auto",
                      },
                      {
                        "fontSize": 12,
                      },
                    ]
                  }
                >
                  mainMenu.tabAbout
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.08)",
              "height": 1,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 14,
          }
        }
        testID="main-menu-grid"
      >
        <View
          style={
            {
              "width": "48%",
            }
          }
        >
          <View
            accessibilityLabel="Crosswind · Takeoff"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="module-card-crosswind-takeoff"
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "rgba(0, 0, 0, 0.08)",
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "padding": 12,
                  },
                  {
                    "opacity": 1,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "position": "absolute",
                    "right": 8,
                    "top": 8,
                  }
                }
              >
                <Text
                  allowFontScaling={true}
                  style={
                    [
                      {
                        "color": "#6B7280",
                        "fontFamily": "System",
                        "fontSize": 11,
                        "fontWeight": "600",
                        "letterSpacing": 0.44,
                        "lineHeight": 16,
                        "textAlign": "auto",
                      },
                      {
                        "fontSize": 8,
                      },
                    ]
                  }
                >
                  Phase 2
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "rgba(0, 0, 0, 0.16)",
                    "borderRadius": 6,
                    "height": 28,
                    "justifyContent": "center",
                    "marginBottom": 8,
                    "width": 28,
                  }
                }
              >
                <Text
                  allowFontScaling={true}
                  style={
                    [
                      {
                        "color": "#6B7280",
                        "fontFamily": "Menlo",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                        "textAlign": "auto",
                      },
                      {
                        "fontSize": 11,
                      },
                    ]
                  }
                >
                  TO
                </Text>
              </View>
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "color": "#1F2937",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 16,
                      "textAlign": "auto",
                    },
                    {
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                  ]
                }
              >
                Crosswind · Takeoff
              </Text>
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "color": "#4B5563",
                      "fontFamily": "System",
                      "fontSize": 11,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 16,
                      "textAlign": "auto",
                    },
                    {
                      "fontSize": 10,
                      "lineHeight": 14,
                    },
                  ]
                }
              >
                Same crosswind logic applied to the takeoff phase.
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "width": "48%",
            }
          }
        >
          <View
            accessibilityLabel="Crosswind · Landing"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="module-card-crosswind-landing"
          >
            <View
              style={
                [
                  {
                    "borderColor": "#00C2A8",
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "overflow": "hidden",
                    "padding": 12,
                  },
                  {
                    "opacity": 1,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
            >
              <ViewManagerAdapter_ExpoLinearGradient
                colors={
                  [
                    4294967295,
                    4292802547,
                  ]
                }
                endPoint={
                  [
                    1,
                    1,
                  ]
                }
                startPoint={
                  [
                    0,
                    0,
                  ]
                }
                style={
                  [
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    {
                      "borderRadius": 10,
                    },
                  ]
                }
              />
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#DEF7F3",
                    "borderRadius": 6,
                    "height": 28,
                    "justifyContent": "center",
                    "marginBottom": 8,
                    "width": 28,
                  }
                }
              >
                <Text
                  allowFontScaling={true}
                  style={
                    [
                      {
                        "color": "#00C2A8",
                        "fontFamily": "Menlo",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                        "textAlign": "auto",
                      },
                      {
                        "fontSize": 11,
                      },
                    ]
                  }
                >
                  XW
                </Text>
              </View>
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "color": "#1F2937",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 16,
                      "textAlign": "auto",
                    },
                    {
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                  ]
                }
              >
                Crosswind · Landing
              </Text>
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "color": "#4B5563",
                      "fontFamily": "System",
                      "fontSize": 11,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 16,
                      "textAlign": "auto",
                    },
                    {
                      "fontSize": 10,
                      "lineHeight": 14,
                    },
                  ]
                }
              >
                mainMenu.activeModuleDescription
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Main Menu route renders the header, NavPills, the takeoff teaser, and the active landing card (dark) 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#0A0E14",
      "flex": 1,
    }
  }
  testID="main-menu-screen"
>
  <View
    style={
      [
        {
          "flex": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "stretch",
            "flexDirection": "column",
            "gap": 12,
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "stretch",
              "flexDirection": "column",
              "gap": 12,
              "justifyContent": "flex-start",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "gap": 8,
                "justifyContent": "flex-start",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "flexWrap": "nowrap",
                  "gap": 8,
                  "justifyContent": "flex-start",
                },
                undefined,
              ]
            }
          >
            <View
              accessibilityLabel="B787 logo"
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#003C36",
                  "borderRadius": 6,
                  "height": 28,
                  "justifyContent": "center",
                  "width": 28,
                }
              }
              testID="main-menu-logo"
            >
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "color": "#00C2A8",
                      "fontFamily": "Menlo",
                      "fontSize": 16,
                      "fontWeight": "500",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                      "textAlign": "auto",
                    },
                    undefined,
                  ]
                }
              >
                B7
              </Text>
            </View>
            <Text
              allowFontScaling={true}
              style={
                [
                  {
                    "color": "#E6EDF3",
                    "fontFamily": "System",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "textAlign": "auto",
                  },
                  {
                    "fontSize": 16,
                  },
                ]
              }
            >
              B787 Calculator
            </Text>
          </View>
          <View
            accessibilityRole="tablist"
            style={
              [
                {
                  "flexDirection": "row",
                  "gap": 4,
                },
                {
                  "alignSelf": "stretch",
                },
              ]
            }
            testID="main-menu-tabs"
          >
            <View
              accessibilityLabel="mainMenu.tabModules"
              accessibilityRole="tab"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": true,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "flex": 1,
                }
              }
              testID="main-menu-tabs-modules"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderRadius": 10,
                      "justifyContent": "center",
                      "minHeight": 44,
                      "paddingHorizontal": 10,
                      "paddingVertical": 5,
                    },
                    {
                      "backgroundColor": "#003C36",
                    },
                    {
                      "opacity": 1,
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={true}
                  style={
                    [
                      {
                        "color": "#00C2A8",
                        "fontFamily": "System",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 16,
                        "textAlign": "auto",
                      },
                      {
                        "fontSize": 12,
                      },
                    ]
                  }
                >
                  mainMenu.tabModules
                </Text>
              </View>
            </View>
            <View
              accessibilityLabel="mainMenu.tabSettings"
              accessibilityRole="tab"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": false,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "flex": 1,
                }
              }
              testID="main-menu-tabs-settings"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderRadius": 10,
                      "justifyContent": "center",
                      "minHeight": 44,
                      "paddingHorizontal": 10,
                      "paddingVertical": 5,
                    },
                    null,
                    {
                      "opacity": 1,
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={true}
                  style={
                    [
                      {
                        "color": "#8B949E",
                        "fontFamily": "System",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 16,
                        "textAlign": "auto",
                      },
                      {
                        "fontSize": 12,
                      },
                    ]
                  }
                >
                  mainMenu.tabSettings
                </Text>
              </View>
            </View>
            <View
              accessibilityLabel="mainMenu.tabAbout"
              accessibilityRole="tab"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": false,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "flex": 1,
                }
              }
              testID="main-menu-tabs-about"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderRadius": 10,
                      "justifyContent": "center",
                      "minHeight": 44,
                      "paddingHorizontal": 10,
                      "paddingVertical": 5,
                    },
                    null,
                    {
                      "opacity": 1,
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={true}
                  style={
                    [
                      {
                        "color": "#8B949E",
                        "fontFamily": "System",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 16,
                        "textAlign": "auto",
                      },
                      {
                        "fontSize": 12,
                      },
                    ]
                  }
                >
                  mainMenu.tabAbout
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "rgba(255, 255, 255, 0.08)",
              "height": 1,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 14,
          }
        }
        testID="main-menu-grid"
      >
        <View
          style={
            {
              "width": "48%",
            }
          }
        >
          <View
            accessibilityLabel="Crosswind · Takeoff"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="module-card-crosswind-takeoff"
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "#11161F",
                    "borderColor": "rgba(255, 255, 255, 0.08)",
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "padding": 12,
                  },
                  {
                    "opacity": 1,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "position": "absolute",
                    "right": 8,
                    "top": 8,
                  }
                }
              >
                <Text
                  allowFontScaling={true}
                  style={
                    [
                      {
                        "color": "#6E7681",
                        "fontFamily": "System",
                        "fontSize": 11,
                        "fontWeight": "600",
                        "letterSpacing": 0.44,
                        "lineHeight": 16,
                        "textAlign": "auto",
                      },
                      {
                        "fontSize": 8,
                      },
                    ]
                  }
                >
                  Phase 2
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "rgba(255, 255, 255, 0.16)",
                    "borderRadius": 6,
                    "height": 28,
                    "justifyContent": "center",
                    "marginBottom": 8,
                    "width": 28,
                  }
                }
              >
                <Text
                  allowFontScaling={true}
                  style={
                    [
                      {
                        "color": "#6E7681",
                        "fontFamily": "Menlo",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                        "textAlign": "auto",
                      },
                      {
                        "fontSize": 11,
                      },
                    ]
                  }
                >
                  TO
                </Text>
              </View>
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "color": "#E6EDF3",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 16,
                      "textAlign": "auto",
                    },
                    {
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                  ]
                }
              >
                Crosswind · Takeoff
              </Text>
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "color": "#8B949E",
                      "fontFamily": "System",
                      "fontSize": 11,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 16,
                      "textAlign": "auto",
                    },
                    {
                      "fontSize": 10,
                      "lineHeight": 14,
                    },
                  ]
                }
              >
                Same crosswind logic applied to the takeoff phase.
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "width": "48%",
            }
          }
        >
          <View
            accessibilityLabel="Crosswind · Landing"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="module-card-crosswind-landing"
          >
            <View
              style={
                [
                  {
                    "borderColor": "#00C2A8",
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "overflow": "hidden",
                    "padding": 12,
                  },
                  {
                    "opacity": 1,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
            >
              <ViewManagerAdapter_ExpoLinearGradient
                colors={
                  [
                    4279309855,
                    4278205494,
                  ]
                }
                endPoint={
                  [
                    1,
                    1,
                  ]
                }
                startPoint={
                  [
                    0,
                    0,
                  ]
                }
                style={
                  [
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    {
                      "borderRadius": 10,
                    },
                  ]
                }
              />
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#003C36",
                    "borderRadius": 6,
                    "height": 28,
                    "justifyContent": "center",
                    "marginBottom": 8,
                    "width": 28,
                  }
                }
              >
                <Text
                  allowFontScaling={true}
                  style={
                    [
                      {
                        "color": "#00C2A8",
                        "fontFamily": "Menlo",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                        "textAlign": "auto",
                      },
                      {
                        "fontSize": 11,
                      },
                    ]
                  }
                >
                  XW
                </Text>
              </View>
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "color": "#E6EDF3",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 16,
                      "textAlign": "auto",
                    },
                    {
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                  ]
                }
              >
                Crosswind · Landing
              </Text>
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "color": "#8B949E",
                      "fontFamily": "System",
                      "fontSize": 11,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 16,
                      "textAlign": "auto",
                    },
                    {
                      "fontSize": 10,
                      "lineHeight": 14,
                    },
                  ]
                }
              >
                mainMenu.activeModuleDescription
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
